crates/plotnik-lib/tests/02-parser/recovery_unexpected/garbage_at_expression_position.txt
^^^ $$$ %%% (ok)
==== diagnostics ====
error: unexpected token
 --> query.ptk:1:1
  |
1 | ^^^ $$$ %%% (ok)
  | ^^^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
